static/style.css
body{
	background-color: white;
	font-weight: 200;
	font-family: Helvetica;
}
#index-background{
	/*background-image: url({{ url_for('static', filename='images/test_house.jpg') }})*/
	background-image: url('/static/images/test_house.jpg');
	background-repeat: no-repeat;
	background-size: cover;
}
div .houseListing{
	height: 300px;
	width: 300px;
	background-color: #FFB094;
	display: inline-block;
	margin: 1.5vw;
}
#Header{ 
	padding: 0.5vw;
	margin: .5v;
}
#Welcome-Header{
	text-align: center;
	background-color: #009598;
	border-radius: 30px;
 	position: absolute;
 	width: 45vw;
 	height: 18vw;
 	z-index: 15;
 	top: 50%;
 	left: 50%;
 	margin: -9vw 0 0 -22.5vw;
 	color:white;
}
.loginForm{
	padding: 0.4vw;
	display: block;
}
.loginInput{
	border-radius: 5px;
	color: black;
	font-weight: 100;
}
.newUserLink{
	text-decoration: none;
	color: #E27C53;
}
.newPropForm{
	padding: 1vw;
}
.loginSubmitButton{
	background-color: #E27C53;
}
.houseInfo{
	margin:0;
	padding: 2vw;
	text-align: left;
	list-style: none;
	font-size: 1.2vw;
}
#update-button{
	padding-left: 0.5vw;
	padding-right: 0.5vw;
}
#map-campus{
	background-size: cover;
	height: 600px;
	text-align: center;
  	overflow: hidden;
  	margin: 10px;
  	margin-top: 4.5vw;
}
.markerLink{
	text-decoration: none;
}
#view-houses{
	text-align: center;
}
.filter-option{
	display: inline-block;
	padding: 0.2vw;
}
#filterbar{
	background-color: #BAD6B9;
	/*background-color: #00B2BC;*/
	padding-top: 0.5vw;
}
.navbar-links{
	display: inline-block;
	padding: 0.2vw;
	text-decoration: none;
	font-size: 1.1vw;
	/*font-size: 130%;*/
}
.navbar-logo{
	width: 70px;
	height: auto;
	margin: 0;
	padding: 5px;
	padding-left: 1vw;
}
input[type=button], input[type=submit], input[type=reset] {
    background-color: #89B3EA;
    border: none;
    color: white;
    padding: 16px 32px;
    text-decoration: none;
    margin: 4px 2px;
    cursor: pointer;
}

.filterOption{
	display: inline-block;
	/*padding: 0.5vw;*/
}
.filterLabel{
	padding: 0.3vw;
}
.filter-btn{
	margin: 0.5vw;
}
.NoBulletsList{
	list-style: none;
}
.container{
	margin-top: 4.5vw;
}
.new-prop{
	margin-left: 1vw;
}
.newPropLabel{
	font-size: 2vw;
	font-weight: 300;
}
.newPropFormLabel{
	display: inline-block;
}
.propertiesTable{
	width: 30vw;
	margin: 2vw auto;
}
.tableCenter{
	text-align: center;
}
.tableCenter th{
	text-align: center;
}
.edit-btn{
	margin: 0.2vw;
	margin-left: 0.4vw;
}

